--- a/.github/workflows/release-npm-library.yml
+++ b/.github/workflows/release-npm-library.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 14
+          registry-url: "https://registry.npmjs.org"
       - run: npm ci
       - run: npm run compile
       - run: npm run test
@@ -21,7 +22,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-      - run: npm version --no-git-tag-version -f $NEW_VERSION
+      - run: npm version --no-git-tag-version -f ${{ steps.tag-version.outputs.new_version }}
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
